# MMDS

./: README.md  pyproject.toml
data/: 311-mmds.ddb  311_service_requests.json
src/: api_tomfoolery.ipynb  duckdb.sql
