[project]
name = "mmds"
version = "0.1.0"
description = "Miniature Modern Data Stack"
authors = [
    {name = "Remy Shea",email = "shea.remy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb (>=1.3.0,<2.0.0)",
    "dbt (>=1.0.0.40.3,<2.0.0.0.0)",
    "gx (>=1.0.5,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
